--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,11 @@
 @layer base {
   html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
   
   body {
-    @apply bg-slate-950 text-slate-200 transition-colors duration-300 font-space-grotesk text-[15px];
+    @apply bg-slate-950 text-slate-200 transition-colors duration-300 font-space-grotesk text-[15px] overflow-x-hidden;
   }
 
   h1 {
